--- a/src/main/resources/templates/components/header.html
+++ b/src/main/resources/templates/components/header.html
@@ -1,4 +1,4 @@
-<header id="myHeader" class="header" xmlns:sec="http://www.w3.org/1999/xhtml">
+<header id="myHeader" class="header">
     <div class="container">
         <div class="header__menu-top">
             <a th:href="@{/}"><img th:src="@{/images/header/logotype-update.svg}" alt="лого" class="header_logo"></a>
