--- a/src/main/resources/static/css/details-track.css
+++ b/src/main/resources/static/css/details-track.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100vh;
     transition: all 0.6s ease !important;
+    /*transition: bottom 0.6s ease-in-out;*/
     z-index: 200;
     background-position: center !important;
     background-size: cover !important;
@@ -56,7 +57,7 @@
     line-height: 1;
     transition: color .3s, opacity .3s;
     padding: 0 0 6px;
-    color: var(--grayNotEdit);
+    color: var(--gray);
 }
 
 .details-track__btn::after {
@@ -80,37 +81,36 @@
 }
 
 .details-track__title {
-    color: var(--white-text);
-    font-size: 52px;
-    font-weight: 400;
+    color: var(--white);
+    font-size: 64px;
+    font-weight: 500;
     line-height: 140%;
-    margin-top: 200px;
+    margin-top: 80px;
 }
 
 .details-track__artist {
     margin-top: 20px;
-    color: var(--white-text);
+    color: var(--white);
     font-size: 32px;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 140%;
 }
 
 .details-track__genre {
-    display: block;
     margin-top: 20px;
-    color: var(--grayNotEdit);
+    color: var(--gray);
     font-size: 20px;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 140%;
 
 }
 
 .details-track__lyrics {
     text-wrap: balance;
-    color: var(--white-text);
+    color: var(--white);
     font-size: 38px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 140%;
 }
 
@@ -122,7 +122,7 @@
 .track__tab-lyric {
     max-height: 600px;
     overflow-y: auto;
-    mask-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+    mask-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0));
 }
 
 .details-track__tab {
@@ -133,6 +133,15 @@
 .details-track__tab.active {
     display: block;
 }
+
+/*.track__tab-lyric::before {*/
+/*    position: absolute;*/
+/*    content: "";*/
+/*    left: 0;*/
+/*    width: 2px;*/
+/*    height: 100%;*/
+/*    background-color: var(--feolet);*/
+/*}*/
 
 .details-track__video {
     position: relative;
@@ -182,7 +191,6 @@
     transition: background-color 0.5s ease;
 }
 
-.success__notification,
 .warn__notification {
     pointer-events: none;
     opacity: 0;
@@ -198,23 +206,9 @@
     transition: all .5s ease-in-out;
 }
 
-.success__notification {
-    opacity: 1;
-}
-
 .warn__notification p {
     color: #FFF;
     font-size: 17px;
     font-weight: 500;
     line-height: normal;
-}
-
-@media screen and (min-height: 1080px) {
-    .details-track__inner {
-        margin-top: 160px;
-    }
-
-    .InaccessibleContent {
-        bottom: 7.9%;
-    }
 }
