--- a/src/main/resources/templates/AllTracks.html
+++ b/src/main/resources/templates/AllTracks.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:sec="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -16,30 +16,28 @@
     <link rel="stylesheet" th:href="@{/css/tracks-main.css}">
     <link rel="stylesheet" th:href="@{/css/details-track.css}">
     <link rel="stylesheet" th:href="@{/css/AllArtist.css}">
-    <link rel="stylesheet" th:href="@{/css/BlockUpdates.css}">
-    <link rel="stylesheet" th:href="@{/css/Artist.css}">
     <link rel="icon" th:href="@{/images/logo.svg}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <title>Musical - Релизы</title>
 </head>
 
 <body class="body">
-
 <div style="background: rgba(83, 71, 204, 0.60); top: -28%; left: -7%;" class="top-decor-left"></div>
 <div style="background: rgba(191, 62, 253, 0.50); top: -40%; left: 30%;" class="top-decor-left"></div>
 
-<header class="header" th:insert="~{components/header :: header}"></header>
+<header class="header" th:include="components/header :: header"></header>
 
 <section class="control-panel" sec:authorize="isAuthenticated()">
     <div class="container">
-        <h1 id="greeting" class="title"></h1><span class="control-panel-name" th:text="${name} + '!'"></span>
+        <h1 class="title">Добрый день <span class="control-panel-name" th:text="${name} + '!'"></span></h1>
 
         <div class="control-panel__wrapper">
 
             <div class="control-block" style="background: linear-gradient(90deg, #474EEF 0%, #6C56F3 100%);">
                 <div class="control-block-randTrack">
                     <h2>Произвести рандомные треки</h2>
-                    <button class="control-block-randBtn" onclick="playRandomTrack()">
-                        <img class="control-block-randBtn-img" th:src="@{/images/play-track-small.svg}"
+                    <button class="control-block-randBtn">
+                        <img class="control-block-randBtn-img" src="../images/play-track-small.svg"
                              alt="Воспроизвести">
                     </button>
                 </div>
@@ -47,22 +45,21 @@
 
             <div class="control-block">
                 <div class="control-block-volume">
-                    <img th:src="@{/images/sound-mute-icon.svg}" title="Уменьшить громкость" alt="sound-mute-icon">
+                    <img th:src="@{/images/sound-mute-icon.svg}">
                     <div class="slider-container">
-                        <label for="volumeControl"></label>
                         <input class="range" type="range" id="volumeControl" min="0" max="1" step="0.1"
                                value="${volume}"/>
                         <div class="slider-track"></div>
                     </div>
-                    <img th:src="@{/images/sound-active-icon.svg}" title="Увеличить громкость" alt="sound-active-icon">
+                    <img th:src="@{/images/sound-active-icon.svg}" title="Увеличить громкость">
                 </div>
             </div>
 
             <div class="control-block">
                 <div class="control-block-device">
-                    <img th:src="@{/images/device-icon.svg}" title="Устройство воспроизведения" alt="device-icon">
+                    <img th:src="@{/images/device-icon.svg}" title="Устройство воспроизведения">
                     <h6>Играет на: </h6>
-                    <span id="osVersion" style="color: var(--white-text)">Определение</span>
+                    <span id="osVersion">Определение</span>
                 </div>
             </div>
 
@@ -70,26 +67,15 @@
                 <div class="control-block-genre">
                     <div class="block-genre" style="background: #E7AD1A">
                         <span>Альтернатива</span>
-                        <img th:src="@{/images/play-track-small.svg}"
+                        <img src="../images/play-track-small.svg"
                              alt="Воспроизвести">
                     </div>
 
                     <div class="block-genre" style="background: #E9ADCD">
                         <span>Поп-Панк</span>
-                        <img th:src="@{/images/play-track-small.svg}"
+                        <img src="../images/play-track-small.svg"
                              alt="Воспроизвести">
                     </div>
-                </div>
-                <div class="no-work__warn">
-                    <div class="no-work__warn_title">
-                        <h2>Пока недоступно</h2>
-                        <button class="subs__warn-close noWork-close"><img th:src="@{/images/close-for-warn.svg}"
-                                                                           class="icon-close" alt="close-for-warn">
-                        </button>
-                    </div>
-                    <p>Функция находиться
-                        <br>на этапе разработки
-                    </p>
                 </div>
             </div>
         </div>
@@ -114,32 +100,28 @@
                         </audio>
                         <div class="tracks-main__top">
                             <img class="tracks-main__img" th:src="@{'/uploads/' + ${track.getCoverfilename()}}"
-                                 height="225" alt="tracks-main__img">
-                            <button class="tracks-main__btn" th:data-track-id="${track.id}"
-                                    onclick="listenToTrack(this)">
-                                <img class="playPauseIconSlider" th:src="@{images/play-track-small.svg}"
+                                 height="260">
+                            <button class="tracks-main__btn" th:data-track-id="${track.id}">
+                                <img class="playPauseIconSlider" src="../images/play-track-small.svg"
                                      alt="Воспроизвести">
                             </button>
                         </div>
-                        <h3 class="tracks-main__album" th:text="${track.getTitle()}"></h3>
-                        <a class="tracks-main__artist"
-                           th:href="@{'/artist/' + ${track.artists.id} + '/details'}"><span
-                                th:text="${track.artists.name}"></span></a>
+                        <h3 class="tracks-main__name" th:text="${track.getTitle()}"></h3>
+                        <span class="tracks-main__album" th:text="${track.artists.name}"></span>
                     </li>
                 </ul>
             </th:block>
-            <button class="tracks-main__more" type="button">Ещё</button>
+            <button class="tracks-main__more" type="button">Показать ещё</button>
         </div>
     </div>
 
     <div class="subs__warn">
-        <button class="subs__warn-close"><img th:src="@{/images/close-for-warn.svg}" class="icon-close"
-                                              alt="close-for-warn.svg"></button>
+        <button class="subs__warn-close"><img src="../images/close.svg"></button>
         <p>Функция доступна только при подписке Меломан
             <br>
-            Хотите приобрести?
+            Хотите преобрести?
         </p>
-        <a class="subs__warn-subs" th:href="@{subscribe}">Хочу</a>
+        <a class="subs__warn-subs" th:href="@{subscribe}">И зачем вы проверяете эти функции?</a>
     </div>
 
     <div class="bottom_panel">
@@ -149,13 +131,11 @@
                 <div class="audio-left-block">
 
                     <div class="audio__info-wrapper">
-                        <img class="coverImage"
-                             th:src="@{/images/track-test-2.png}"
-                             alt="Обложка аудио"
+                        <img class="coverImage" src="../images/cover/Nirvana_album_cover.svg.webp" alt="Обложка аудио"
                              width="50">
                         <div class="track__info">
-                            <h3 class="trackTitle">Включите трек</h3>
-                            <a href="#" class="artistsName">И здесь появится информация</a>
+                            <h3 class="trackTitle">Название аудио</h3>
+                            <p class="artistsName">Имя исполнителя</p>
                         </div>
                     </div>
 
@@ -176,36 +156,28 @@
                 </div>
 
                 <div class="controls">
-                    <button id="prevButton"><img th:src="@{/images/prev_song-icon.svg}" alt="Пред трек"
-                                                 draggable="false"></button>
-                    <button class="toggle-audio-button" id="playPauseButton">
-                        <img class="playPauseIcon" th:src="@{/images/play-icon.svg}" alt="Воспроизвести"
-                             draggable="false"></button>
-                    <button id="nextButton"><img th:src="@{/images/next_song-icon.svg}" alt="След трек"
-                                                 draggable="false"></button>
+                    <button id="prevButton"><img src="../images/prev_song-icon.svg" alt="Пред трек"></button>
+                    <button class="toggle-audio-button" id="playPauseButton"><img class="playPauseIcon"
+                                                                                  src="../images/play-icon.svg"
+                                                                                  alt="Воспроизвести"></button>
+                    <button id="nextButton"><img src="../images/next_song-icon.svg" alt="След трек"></button>
                 </div>
                 <div class="audio-action_btn">
                     <button onclick="toggleMute()">
-                        <img class="action_btn-sound-active btn" id="muteIcon"
-                             th:src="@{/images/sound-active-icon.svg}"
+                        <img class="action_btn-sound-active btn" id="muteIcon" src="../images/sound-active-icon.svg"
                              alt="Звук включен">
                     </button>
                     <button class="action_btn-repeat">
-                        <img class="btn" th:src="@{/images/repeat-icon.svg}" alt="На повтор">
+                        <img class="btn" src="../images/repeat-icon.svg" alt="На повтор">
                     </button>
                     <button class="action_btn-shuffle">
-                        <img class="btn" th:src="@{/images/shuffle-icon.svg}" alt="Перемешка">
+                        <img class="btn" src="../images/shuffle-icon.svg" alt="Перемешка">
                     </button>
                     <button class="action_btn-more">
-                        <img class="btn" th:src="@{/images/more-icon.svg}" alt="Еще больше">
+                        <img class="btn" src="../images/more-icon.svg" alt="Еще больше">
                     </button>
-                    <button class="action_btn-more" sec:authorize="!isAuthenticated()">
-                        <img class="action_btn-maximize btn" th:src="@{/images/maximize-icon-lock.svg}"
-                             alt="На весь экран">
-                    </button>
-                    <button id="fullscreen-container" class="transition" sec:authorize="isAuthenticated()">
-                        <img class="action_btn-maximize btn" th:src="@{/images/maximize-icon.svg}"
-                             alt="На весь экран">
+                    <button id="fullscreen-container" class="transition">
+                        <img class="action_btn-maximize btn" src="../images/maximize-icon.svg" alt="На весь экран">
                     </button>
                 </div>
             </div>
@@ -213,28 +185,22 @@
     </div>
 
     <div class="warn__notification">
-        <p>Для полного восприятия вида нажмите F11</p>
-    </div>
-
-    <div th:if="${successMessage != null}" class="success__notification" role="alert">
-        [[${successMessage}]]
+        <p>Для более хорошего и красивого вида нажмите F11</p>
     </div>
 </section>
 
 <section class="interesting-artist">
     <div class="container">
-        <h1 class="title">Интересные артисты</h1>
+        <h1 class="title">Недавние Артисты</h1>
         <div class="artists__wrapper">
             <th:block th:if="${recentlyViewedArtists != null and not #lists.isEmpty(recentlyViewedArtists)}">
                 <th:block th:each="artist: ${recentlyViewedArtists}">
                     <a th:href="@{'/artist/' + ${artist.id} + '/details'}">
                         <div class="artist__block">
-                            <img th:src="@{'/uploads/' + ${artist.filename}}" alt="artist-image"
-                                 class="artist-avatar">
+                            <img th:src="@{'/uploads/' + ${artist.filename}}" alt="artist-image" class="artist-avatar">
                             <h2 class="interesting-artist-name" th:text="${artist.name}">Исполнитель</h2>
                             <span class="interesting-artist-genre" th:text="${artist.genre}">Альтернатива</span>
-                            <img class="interesting-artist-link" th:src="@{/images/link-artist.svg}"
-                                 alt="decor-el"
+                            <img class="interesting-artist-link" th:src="@{/images/link-artist.svg}" alt="decor-el"
                                  style="">
                         </div>
                     </a>
@@ -244,94 +210,40 @@
     </div>
 </section>
 
-<section class="ads-banner">
-    <div class="container">
-        <div class="banner">
-            <div class="banner-gradient">
-                <img th:src="@{/images/banner-gr-1.svg}" alt="banner-gr-1">
-            </div>
-            <div class="banner-wrapper">
-                <div class="banner-title-wrapper">
-                    <h1 class="banner-title">Хочешь попасть в секретный
-                        Телеграм канал нашего сервиса?</h1>
-                    <a href="#" class="close-button"><img th:src="@{/images/close.svg}" alt="close"></a>
-                </div>
-                <p class="banner-description">Чтобы узнавать быстрее всех об обновлениях или выпусках новых
-                    треков,
-                    артистов и подкастов! Может ты хочешь испытать новые фишки? Оформляй подписку “Эклектик” и
-                    получай
-                    приватное приглашение в наш канал</p>
-                <a th:href="@{/subscribe}" class="banner-link">Приобрести</a>
-            </div>
-            <div class="banner-gradient-2">
-                <img th:src="@{/images/banner-gr-2.svg}" alt="banner-gr-2">
-            </div>
-            <div class="banner-gradient-decor">
-                <div>
-                    <img th:src="@{/images/banner-circle.svg}" alt="banner-circle">
-                    <img th:src="@{/images/banner-circle.svg}" alt="banner-circle">
-                </div>
-                <img class="gradient-decor-img" th:src="@{/images/banner-circle.svg}" alt="banner-circle">
-            </div>
+<section style="margin: 200px;">Заглушка</section>
 
-        </div>
-    </div>
-</section>
-
-<section class="interesting-playlists">
-    <div class="container">
-        <h2 class="title">Подходящие плейлисты</h2>
-        <div class="Artist__info-playlists">
-            <div class="Artist__info-sets-wrapper set-wrapper-playlist" th:each="playlist : ${playlists}">
-                <a th:href="@{/artist/{artistId}/playlist/{playlistId}(artistId = ${playlist.getArtist().id}, playlistId = ${playlist.id})}"
-                   class="Artist__info-playlist">
-                    <h3 th:text="${playlist.title}"></h3>
-                    <img th:src="@{'/uploads/' + ${playlist.cover}}" alt="pl1">
-                </a>
-            </div>
-        </div>
-
-    </div>
-</section>
-
-<section class="InaccessibleContent" sec:authorize="!isAuthenticated()">
-    <div class="container">
-        <div class="InaccessibleContent__wrapper">
-            <p>Зарегистрируйся сейчас и получи доступ ко всем возможностям нашего сервиса!</p>
-            <a th:href="@{/registration}" class="InaccessibleContent-btn">
-                <div class="InaccessibleContent-btn-inner" sec:authorize="!isAuthenticated()">
-                    Регистрация
-                </div>
-            </a>
-        </div>
-    </div>
-</section>
-
-<section style="margin: 200px;"></section>
-
-<div class="details-track" style="background: url('/images/track-test-3.png');">
+<div class="details-track" style="background: url('/images/track-test-2.png');">
     <div class="container">
         <div class="details-track__inner">
             <div class="details-track__left">
-                <img class="details-track__img coverImage" th:src="@{/images/track-test-2.png}" alt="cover"
-                     width="690"
+                <img class="details-track__img coverImage" th:src="@{/images/track-test-2.png}" alt="cover" width="690"
                      height="690">
             </div>
             <div class="details-track__tabs">
                 <div class="details-track__top">
                     <button class="details-track__btn active" data-tab="quotes">Подробное</button>
                     <button class="details-track__btn" data-tab="text">Текст</button>
+                    <button class="details-track__btn" data-tab="video">Цитаты</button>
                 </div>
                 <div class="details-track__content">
                     <div class="details-track__tab active" data-tab="quotes">
-                        <h3 class="details-track__title trackTitle">Название трека</h3>
-                        <p class="details-track__artist artistsName">Исполнитель</p>
-                        <span class="details-track__genre">Жанр трека | Год выпуска</span>
+                        <h3 class="details-track__title trackTitle">Хомяк</h3>
+                        <p class="details-track__artist artistsName">Темным и Обманчивым</p>
+                        <span class="details-track__genre">Русский Рок | 2023 Год</span>
                     </div>
                     <div class="details-track__tab track__tab-lyric" data-tab="text">
                         <p class="details-track__lyrics">
-                            Здесь будет показываться текст играющего трека
+                            Текст трека
                         </p>
+                    </div>
+                    <div class="details-track__tab" data-tab="video">
+                        <div class="details-track__video">
+                            <img class="details-track__img" src="../images/cover/track-test-2.webp" alt=""
+                                 height="390">
+                            <button class="details-track__play">
+                                <img src="../images/play-icon-for-slider.svg" alt="" width="80" height="80">
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -339,23 +251,17 @@
     </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+</body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/platform/1.3.5/platform.min.js"></script>
-
 <script>
     let os = platform.os;
     document.getElementById("osVersion").innerText = "" + os.family + " " + os.version;
 </script>
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script th:src="@{/js/tracks-main.js}"></script>
 <script th:src="@{/js/custom-select.js}"></script>
 <script th:src="@{/js/custom-file.js}"></script>
-<script th:src="@{/js/greeting.js}"></script>
 <script th:src="@{/js/alert.js}"></script>
-<script th:src="@{/js/keydown.js}"></script>
 <script th:src="@{/js/main.js}"></script>
 
-</body>
-
 </html>
-
