--- a/src/main/resources/templates/admin/AdminAllUsers.html
+++ b/src/main/resources/templates/admin/AdminAllUsers.html
@@ -37,7 +37,7 @@
             <div class="admin__panel">
                 <div class="admin__panel-users">
                     <ul>
-                        <li th:each="user : ${users}">j
+                        <li th:each="user : ${users}">
                             <div class="user-top">
                                 <div class="user-top-left">
                                     <img class="user_avatar" th:src="@{'/uploads/' + ${user.avatar}}" alt="ava-users"
