--- a/src/main/resources/templates/admin/CreateOrDeleteNews.html
+++ b/src/main/resources/templates/admin/CreateOrDeleteNews.html
@@ -24,27 +24,23 @@
     <div class="container">
         <div class="header__top">
             <div class="header__top-logo">
-                <a th:href="@{/Admin}"><img th:src="@{/images/admin/logotype.svg}" alt="logotype"></a>
+                <img th:src="@{/images/admin/logotype.svg}">
             </div>
             <a class="header__top-logout" th:href="@{/logout}">Выйти из системы</a>
-            <a class="header__top-nameAdmin" th:href="@{/}">Пользовательский интерфейс</a>
+            <span class="header__top-nameAdmin">Администратор Никитаыыы</span>
         </div>
     </div>
     <div class="container">
         <div class="admin__wrapper">
-            <header class="header" th:insert="~{admin/components/Admin-Header :: header}"></header>
+            <header class="header" th:include="admin/components/Admin-Header :: header"></header>
             <div class="admin__panel">
                 <form th:action="@{/news/save}" method="post" enctype="multipart/form-data">
-                    <div th:if="${errorImg}" class="error-message">
-                        <p th:text="${errorImg}"></p>
-                    </div>
                     <div class="data-news">
                         <div class="news-cover">
                             <label for="file">
-                                <img id="preview" th:src="@{/}" alt="plus"
-                                     onerror="this.src='/images/admin/uploads-for-images/cover-for-upload-news.svg';">
+                                <img id="preview" th:src="@{/}" alt="plus" onerror="this.src='/images/default-download-img.png';">
                             </label>
-                            <input type="file" id="file" name="file" accept="image/*" onchange="previewFile()">
+                            <input type="file" id="file" name="file" accept="image/*" required onchange="previewFile()">
                         </div>
                         <div class="news-info">
                             <input type="text" id="title" name="title" required placeholder="Название новости">
@@ -67,7 +63,7 @@
                         </div>
                         <div class="news_descAndPhoto">
                             <p class="news_description" th:text="${news.content}"></p>
-                            <img class="news_photo" th:src="@{'/uploads/' + ${news.getImageNews()}}" alt="news_photo">
+                            <img class="news_photo" th:src="@{'/uploads/' + ${news.getImageNews()}}">
                         </div>
                     </div>
                 </div>
@@ -77,19 +73,8 @@
     </div>
 </div>
 
-<div class="alert-success" id="user-data-message" th:if="${successAdd}" style="left: 35px; right: unset;">
-    <h2>Добавлено!</h2>
-    <p>Новость была добавлена, можете просмотреть в разделе "Новости"</p>
-</div>
-
-<div class="alert-delete" id="user-data-message" th:if="${successDelete}" style="left: 35px; right: unset;">
-    <h2>Удалено!</h2>
-    <p>Новость была, удалена, возможно это действительно было нужно</p>
-</div>
-
 
 </body>
 <script th:src="@{/js/basic-tools.js}"></script>
-<script th:src="@{/js/alert.js}"></script>
 
 </html>
